--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -50,3 +50,9 @@ executable day-1
       solutions
   main-is: day-1.hs
 
+executable day-2
+  import: deps
+  hs-source-dirs:
+      solutions
+  main-is: day-2.hs
+
